Version 4.2-2

 o Added warning or note about unestimable effects.
 
 o More robust computation of residual df in Effect.lm(), to accommodate broader classes of models.

Version 4.2-1

 o Allow the vcov. argument in the call to one of the effect methods to be a matrix or a function.  Previously only a function was permitted.
 
 o Fixed bug in plot.eff() for multiline plots in which the x.var argument is set explicitly (reported by Gerrit Eichner).
 
 o Small improvements to docs.

Version 4.2-0

 o Adding the use of the insight package to get formulas.
 
 o Added Effect.glmmPQL() for fitting generalized linear mixed models using the glmmPQL() function in the MASS package for penalized quasi-likelihood estimation.
 
 o Don't ignore lines lty sub-argument to plot.effpoly() (fixing a bug reported by Laura Adamovicz).
 
 o One-column matrix predictors trigger a warning and correction (following problem reported by Carla Hendricks).
 
 o Added regression tests for classes of model objects supported. Tests must be enabled in the effects sources at tests/regression-tests.R.
 
 o Rewrite of defining effect method vignette.
 
 o Minor changes to predictor effects gallery vignette.

Version 4.1-4

 o Change class(x) == "y" to inherits(x, "y") in code.

Version 4.1-3

 o Handle xlevels=n argument correctly in Effect() (fixing bug reported by Gerrit Eichner).
 
 o Add col argument to effectsTheme(), mostly to accommodate colorblind-friendly palette (suggestion of Sercan Kahveci).

Version 4.1-2

 o Effect methods for clm, clm2, and clmm models were not correctly passing the estimated theshholds to polr for computing effects (error reported by Stefan Th. Gries).  
 
 o Updated "Defining Effects Methods ..." vignette to reflect revisions to Effect.clm, Effect.clm2 and Effect.clmm.
 
 o Make sure that Effect() and plot() methods work correctly with character and logical predictors (following bug report by Julian Gaviria Lopez).

Version 4.1-1
 